--- a/DVDzenoKas/css/styleK5.css
+++ b/DVDzenoKas/css/styleK5.css
@@ -10,14 +10,14 @@ html, body {
 body {
 
 	width:604px; 
-	height:360px;
+	height:364px;
 	background-size: cover;
 }
 
 
 .cover-site {
     width: 604px;
-	height: 360px;
+	height: 364px;
 	background: url() no-repeat;
 	position: absolute;
 	background-size: cover;
@@ -28,12 +28,12 @@ body {
 /* FONDO DESENFOQUE */
 
 #bgCover {
-	width: 330px;
-	height: 355px;
+	width: 382px;
+	height: 347px;
 	background:url() center no-repeat ;
 	background-size: cover;
 	position: absolute;
-	margin: -31px;
+	margin: -21px;
 	top: 30px;
 	left: 0px
 	border-radius: 1px;
@@ -41,7 +41,7 @@ body {
 	-moz-box-shadow: 4px 6px 30px 0px rgba(0,0,0,0.6);
 	box-shadow: 4px 6px 30px 0px rgba(0,0,0,0.6);
 	z-index: -11;
-	left: 85px;
+	left: 55px;
 	box-shadow: 0 0 5px #,
    0 0 25px #180df8,
    0 0 50px #d2e40e,
@@ -113,8 +113,8 @@ bg-mask {
 
 
 .web-player {
-    width:360px; 
-    height:360px;
+    width:420px; 
+    height:364px;
     color: #fff;
     padding: 5px;
     position: absolute;
@@ -188,7 +188,7 @@ currentCoverArt {
 
 .info-current-song {
     font-family: 'Poppins', sans-serif;
-    text-align: center;
+    text-align: left;
 }
 
 .info-current-song h2 {
@@ -456,7 +456,7 @@ input[type=range]::-ms-thumb {
     .info-current-song {
         margin-top: 120px;
         left: 0px;
-        text-align: center;
+        text-align: left;
     }
 /*
     .volume-control {
