--- a/DVDzenoKasF/css/styleK5.css
+++ b/DVDzenoKasF/css/styleK5.css
@@ -188,11 +188,11 @@ currentCoverArt {
 
 .info-current-song {
     font-family: 'Poppins', sans-serif;
-    text-align: left;
+    text-align: center;
 }
 
 .info-current-song h2 {
-    font-size: 20px;
+    font-size: 22px;
     color: #ff0023;
     text-transform: uppercase;
     font-weight: 800;
@@ -200,7 +200,7 @@ currentCoverArt {
 }
 
 .info-current-song h3 {
-    font-size: 15px;
+    font-size: 17px;
    color: #ff0023;
     font-weight: 600;
 }
@@ -456,7 +456,7 @@ input[type=range]::-ms-thumb {
     .info-current-song {
         margin-top: 20px;
         left: 0px;
-        text-align: left;
+        text-align: center;
     }
 /*
     .volume-control {
