--- a/DVDzenoKasF2/css/styleK5.css
+++ b/DVDzenoKasF2/css/styleK5.css
@@ -1,7 +1,7 @@
 @charset 'utf-8';
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,300;1,800&display=swap');
-@import url('https://kastro-59.github.io/Poligonos/DVDzenoKasF2/css/bootstrap.min.css');
+@import url('bootstrap.min.css');
 
 html, body {
     
@@ -455,7 +455,7 @@ input[type=range]::-ms-thumb {
     }
 
     .info-current-song {
-        margin-top: 50px;
+        margin-top: 100px;
         left: 0px;
         text-align: left;
     }
