--- a/DVDzenoKasF2/css/styleK5.css
+++ b/DVDzenoKasF2/css/styleK5.css
@@ -256,7 +256,7 @@ currentCoverArt {
 }
 /
 .modal-content {
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: transparent;
     color: transparent !important;
     border-radius: 20px;
 }
