--- a/DVDzenoKas/css/styleK5.css
+++ b/DVDzenoKas/css/styleK5.css
@@ -9,7 +9,6 @@ html, body {
 
 body {
 
-   
     flex-flow: row;
     justify-content: center;
     overflow-x: hidden;
@@ -18,7 +17,7 @@ body {
 
 .cover-site {
     width: 604px;
-	height: 355px;
+	height: 364px;
 	background: url() no-repeat;
 	position: absolute;
 	background-size: cover;
@@ -29,21 +28,21 @@ body {
 /* FONDO DESENFOQUE */
 
 #bgCover {
-	width: 325px;
-	height: 355px;
+	width: 382px;
+	height: 347px;
 	background:url() center no-repeat ;
 	background-size: cover;
 	position: absolute;
-	margin: -25px;
-	top: 25px;
+	margin: -21px;
+	top: 30px;
 	left: 0px
 	border-radius: 1px;
 	-webkit-box-shadow: 4px 6px 30px 0px rgba(0,0,0,0.6);
 	-moz-box-shadow: 4px 6px 30px 0px rgba(0,0,0,0.6);
 	box-shadow: 4px 6px 30px 0px rgba(0,0,0,0.6);
 	z-index: -11;
-	left: 82px;
-	box-shadow: 0 0 2px #,
+	left: 55px;
+	box-shadow: 0 0 5px #,
    0 0 25px #180df8,
    0 0 50px #d2e40e,
    0 0 200px #180df8;
@@ -75,8 +74,8 @@ body {
    left: 100%;
    }
 	}
-/*
-.bg-mask {
+
+bg-mask {
 	width: 338px;            
 	height: 338px;          
 	background: url()center no-repeat;
@@ -86,9 +85,9 @@ body {
 	overflow: hidden;
 	left: 234px;
 	top: 25px;
-  	  -webkit-animation: spin 4.8s linear infinite;
-    -moz-animation: spin 4.8s linear infinite;
-   animation: spin 4.8s linear infinite;
+  	  -webkit-animation: spin 2.8s linear infinite;
+    -moz-animation: spin 2.8s linear infinite;
+   animation: spin 2.8s linear infinite;
 	z-index: -6;
 	
    }
@@ -111,11 +110,11 @@ body {
   }
    }
 
-*/
+
 
 .web-player {
-    width:360px; 
-    height:360px;
+    width:420px; 
+    height:364px;
     color: #fff;
     padding: 5px;
     position: absolute;
@@ -135,7 +134,7 @@ body {
 }
 
 
-/*
+
 currentCoverArt {
 	width: 330px;
 	height: 330px;
@@ -182,7 +181,7 @@ currentCoverArt {
    }
    }
 
-*/
+
 .logo {
     display: none;
 }
@@ -193,7 +192,7 @@ currentCoverArt {
 }
 
 .info-current-song h2 {
-    font-size: 22px;
+    font-size: 20px;
     color: #ff0023;
     text-transform: uppercase;
     font-weight: 800;
@@ -201,7 +200,7 @@ currentCoverArt {
 }
 
 .info-current-song h3 {
-    font-size: 17px;
+    font-size: 18px;
    color: #ff0023;
     font-weight: 600;
 }
@@ -234,7 +233,7 @@ currentCoverArt {
     color: #fff;
     text-decoration: underline;
 }
-
+*/
 .lyrics {
     text-transform: uppercase;
     text-decoration: underline;
@@ -256,7 +255,7 @@ currentCoverArt {
 }
 /
 .modal-content {
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: transparent;
     color: transparent !important;
     border-radius: 20px;
 }
@@ -455,7 +454,7 @@ input[type=range]::-ms-thumb {
     }
 
     .info-current-song {
-        margin-top: 130px;
+        margin-top: 120px;
         left: 0px;
         text-align: left;
     }
