--- a/DVDzenoKasF/css/styleK5.css
+++ b/DVDzenoKasF/css/styleK5.css
@@ -9,9 +9,9 @@ html, body {
 
 body {
 
-	width:604px; 
-	height:360px;
-	background-size: cover;
+    flex-flow: row;
+    justify-content: center;
+    overflow-x: hidden;
 }
 
 
