--- a/DVDzenoKasF/css/styleK5.css
+++ b/DVDzenoKasF/css/styleK5.css
@@ -17,7 +17,7 @@ body {
 
 .cover-site {
     width: 604px;
-	height: 360px;
+	height: 364px;
 	background: url() no-repeat;
 	position: absolute;
 	background-size: cover;
@@ -28,12 +28,12 @@ body {
 /* FONDO DESENFOQUE */
 
 #bgCover {
-	width: 330px;
-	height: 355px;
+	width: 382px;
+	height: 347px;
 	background:url() center no-repeat ;
 	background-size: cover;
 	position: absolute;
-	margin: -31px;
+	margin: -21px;
 	top: 30px;
 	left: 0px
 	border-radius: 1px;
@@ -41,81 +41,29 @@ body {
 	-moz-box-shadow: 4px 6px 30px 0px rgba(0,0,0,0.6);
 	box-shadow: 4px 6px 30px 0px rgba(0,0,0,0.6);
 	z-index: -11;
-	left: 85px;
-	box-shadow: 0 0 5px #,
-   0 0 25px #180df8,
-   0 0 50px #d2e40e,
-   0 0 200px #180df8;
-
-   }
-   a:nth-child(1){
-   filter: hue-rotate(270deg);
-   }
-   a:nth-child(2){
-   filter: hue-rotate(110deg);
-   }
-   a span{
-   position: absolute;
-   display: block;
-   }
-   a span:nth-child(1){
-   top: 0;
-   left: 0;
-   width: 100%;
-   height: 2px;
-   background: linear-gradient(90deg,transparent,#DF73FF);
-   animation: animate1 1s linear infinite;
-   }
-   @keyframes animate1{
-   0%{
-   left: -100%;
-   }
-   50%,100%{
-   left: 100%;
-   }
+	left: 55px;
+	
 	}
-/*
+
 .bg-mask {
-	width: 338px;            
-	height: 338px;          
+	width: 330px;            
+	height: 330px;          
 	background: url()center no-repeat;
 	background-size: cover;
 	position: absolute;
-	z-index: -10;
+	z-index: -16;
 	overflow: hidden;
 	left: 234px;
-	top: 25px;
-  	  -webkit-animation: spin 4.8s linear infinite;
-    -moz-animation: spin 4.8s linear infinite;
-   animation: spin 4.8s linear infinite;
-	z-index: -6;
-	
-   }
+	top: 20px;
+  
    }
 
-    @-moz-keyframes spin {
-    100% {
-     -moz-transform: rotate(360deg);
-   }
-   }
-   @-webkit-keyframes spin {
-  100% {
-    -webkit-transform: rotate(360deg);
-  }
-   }
-   @keyframes spin {
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-   }
 
-*/
 
 .web-player {
-    width:360px; 
-    height:360px;
-    color: #fff;
+    width:420px; 
+    height:364px;
+    color: transparent;
     padding: 5px;
     position: absolute;
     z-index: 3;
@@ -133,52 +81,23 @@ body {
     
 }
 
-
 /*
-currentCoverArt {
+
+#currentCoverArt {
 	width: 330px;
 	height: 330px;
-	background: url()center no-repeat;
+	background: url(https://kastro-59.github.io/star/CD/lBntdQ9.png)center no-repeat;
 	background-size: cover;
 	position: absolute;
 	border-radius: 100%;
 	-webkit-box-shadow: 2px 3px 30px 0px rgba();
 	-moz-box-shadow: 2px 3px 30px 0px rgba();
 	box-shadow: 2px 3px 30px 0px rgba();
-	z-index: -5;
+	z-index: -10;
 	overflow: hidden;
-	left: 236px;
-	top: 25px;
-	box-shadow: 0 0 5px #,
-   0 0 25px #,
-   0 0 50px #,
-   0 0 200px #;
-   }
-   a:nth-child(1){
-   filter: hue-rotate(270deg);
-   }
-   a:nth-child(2){
-   filter: hue-rotate(110deg);
-   }
-   a span{
-   position: absolute;
-   display: block;
-   }
-   a span:nth-child(1){
-   top: 0;
-   left: 0;
-   width: 100%;
-   height: 2px;
-   background: linear-gradient(90deg,transparent,#);
-   animation: animate1 1s linear infinite;
-   }
-   @keyframes animate1{
-   0%{
-   left: -100%;
-   }
-   50%,100%{
-   left: 100%;
-   }
+	left: 83px;
+	top: 11px;
+
    }
 
 */
@@ -192,7 +111,7 @@ currentCoverArt {
 }
 
 .info-current-song h2 {
-    font-size: 22px;
+    font-size: 20px;
     color: #ff0023;
     text-transform: uppercase;
     font-weight: 800;
@@ -200,7 +119,7 @@ currentCoverArt {
 }
 
 .info-current-song h3 {
-    font-size: 17px;
+    font-size: 18px;
    color: #ff0023;
     font-weight: 600;
 }
@@ -220,7 +139,7 @@ currentCoverArt {
     font-size: 25px;
     margin-top: 7px;
 }
-*/
+
 .volume-slide {
   display:none!important  
 }
@@ -233,7 +152,7 @@ currentCoverArt {
     color: #fff;
     text-decoration: underline;
 }
-
+/
 .lyrics {
     text-transform: uppercase;
     text-decoration: underline;
@@ -253,10 +172,10 @@ currentCoverArt {
     text-decoration: none;
     color: #fff;
 }
-/*
+*/
 .modal-content {
-    background-color: rgba(0, 0, 0, 0.8);
-    color: #fff !important;
+    background-color: transparent;
+    color: transparent !important;
     border-radius: 20px;
 }
 /*
@@ -282,7 +201,7 @@ input[type=range]::-webkit-slider-runnable-track {
     cursor: pointer;
     animate: 0.2s;
     box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
-    background: #fff;
+    background: transparent;
 }
 
 input[type=range]::-webkit-slider-thumb {
@@ -290,7 +209,7 @@ input[type=range]::-webkit-slider-thumb {
     height: 20px;
     width: 20px;
     border-radius: 50%;
-    background: #fff;
+    background: transparent;
     cursor: pointer;
     -webkit-appearance: none;
     margin-top: -8px;
@@ -303,7 +222,7 @@ input[type=range]::-moz-range-track {
     cursor: pointer;
     animate: 0.2s;
     box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
-    background: #fff;
+    background: transparent;
 }
 
 input[type=range]::-moz-range-thumb {
@@ -312,7 +231,7 @@ input[type=range]::-moz-range-thumb {
     height: 20px;
     width: 20px;
     border-radius: 50%;
-    background: #fff;
+    background: transparent;
     cursor: pointer;
 }
 
@@ -330,13 +249,13 @@ input[type=range]::-ms-track {
 }
 
 input[type=range]::-ms-fill-lower {
-    background: #fff;
+    background: transparent;
     border: 0px solid #000101;
     box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
 }
 
 input[type=range]::-ms-fill-upper {
-    background: #fff;
+    background: transparent;
     border: 0px solid #000101;
     box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
 }
@@ -347,12 +266,11 @@ input[type=range]::-ms-thumb {
     height: 20px;
     width: 20px;
     border-radius: 50%;
-    background: #fff;
+    background: transparent;
     cursor: pointer;
 }
 
-
-.historic h2 {
+/*.historic h2 {
     color: #fff;
     border-bottom: 2px solid #fff;
     font-size: 16px;
@@ -384,8 +302,9 @@ input[type=range]::-ms-thumb {
     box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.3);
     transition: background-image 1s;
 }
-*/
+/*
 /* COLOR TEXTO INFO ARTISTA */
+/*
 .historic .music-info {
     color: white;
     font-family: 'Poppins', sans-serif;
@@ -393,6 +312,7 @@ input[type=range]::-ms-thumb {
 
 
 /* COLOR TEXTO CANCION */
+/*
 
 .historic .music-info .song {
     width: 360px;
@@ -402,7 +322,7 @@ input[type=range]::-ms-thumb {
     margin-bottom: 10px;
     color: white;
 }
-
+/*
 @media(max-width: 360px) {
     .cover-album {
         max-width: 360px;
@@ -454,7 +374,7 @@ input[type=range]::-ms-thumb {
     }
 
     .info-current-song {
-        margin-top: 20px;
+        margin-top: 120px;
         left: 0px;
         text-align: center;
     }
