--- a/DVDzenoKasF/css/styleK5.css
+++ b/DVDzenoKasF/css/styleK5.css
@@ -1,7 +1,7 @@
 @charset 'utf-8';
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,300;1,800&display=swap');
-@import url('bootstrap.min1.css');
+@import url('bootstrap.min.css');
 
 html, body {
     
