--- a/DVDzenoKasF/css/styleK5.css
+++ b/DVDzenoKasF/css/styleK5.css
@@ -34,7 +34,7 @@ body {
 #bgCover {
 	width: 325px;
 	height: 355px;
-	background:url() center no-repeat ;
+	background:url(https://i.imgur.com/v9Lpulg.png) center no-repeat ;
 	background-size: cover;
 	position: absolute;
 	margin: -25px;
