--- a/CDzenoDina/css/styleK5.css
+++ b/CDzenoDina/css/styleK5.css
@@ -26,7 +26,7 @@ body {
 	position: absolute;
 	background-size: cover;
 	position: absolute;
-	z-index: -6;
+	z-index: -5;
 }
 
 /* FONDO DESENFOQUE */
@@ -35,6 +35,7 @@ body {
 	width: 382px;
 	height: 347px;
 	background:url(https://i.imgur.com/Bk9dYYB.png) center no-repeat ;
+	opacity:0.9;
 	background-size: cover;
 	position: absolute;
 	margin: -21px;
