--- a/CDzenoDina/css/styleK5.css
+++ b/CDzenoDina/css/styleK5.css
@@ -34,7 +34,7 @@ body {
 #bgCover {
 	width: 382px;
 	height: 347px;
-	background:url() center no-repeat ;
+	background:url(https://i.imgur.com/Bk9dYYB.png) center no-repeat ;
 	background-size: cover;
 	position: absolute;
 	margin: -21px;
