--- a/DVDzenoKasF/css/styleK.css
+++ b/DVDzenoKasF/css/styleK.css
@@ -188,8 +188,8 @@
 	border-left: 1px solid rgba(255,255,255,.);
 	border-right: 1px solid rgba(255,255,255,.);
 	overflow: hidden;
+	opacity: 0.0;	
 	z-index: 4;
-	display:none!important
 	top: 117px;
    }
 
@@ -747,7 +747,7 @@ left: 100%;
   white-space: nowrap;
   position: relative;
   transform: translateX(-50%);
-  display: inline-block;
+  display:none!important	
   left: 200px;
   padding-top: 0px;
   animation: linear infinite;
