--- a/DVDzenoKasF/css/styleK.css
+++ b/DVDzenoKasF/css/styleK.css
@@ -97,14 +97,14 @@
 	background: url(https://kastro-59.github.io/star/CD/lBntdQ9.png)center no-repeat;
 	background-size: cover;
 	position: absolute;
-	z-index: -3;
+	z-index: -10;
 	overflow: hidden;
 	left: 234px;
 	top: 11px;
   	  -webkit-animation: spin 2.1s linear infinite;
     -moz-animation: spin 2.1s linear infinite;
    animation: spin 2.1s linear infinite;
-	z-index: -1;
+	z-index: -6;
 	
    }
    }
@@ -188,7 +188,6 @@
 	border-left: 1px solid rgba(255,255,255,.);
 	border-right: 1px solid rgba(255,255,255,.);
 	overflow: hidden;
-	opacity: 0.0;	
 	z-index: 4;
 	top: 117px;
    }
@@ -316,6 +315,7 @@
 	-webkit-transition: background 0.5s;
 	-moz-transition: background 0.5s; 
     transition: background 0.5s;
+    cursor: url(https://kastro-59.github.io/star/CD/YATfaoA.png), auto;
    }
    .Kastrostreaming .stop-btn {
 	background: url(https://kastro-59.github.io/repros/STOP.png);
@@ -325,6 +325,7 @@
 	-webkit-transition: background 0.5s;
 	-moz-transition: background 0.5s; 
     transition: background 0.5s;
+    cursor: url(https://kastro-59.github.io/star/CD/YATfaoA.png), auto;
    }
    .Kastrostreaming .icons-left-serv {
 	position: absolute;
@@ -436,7 +437,7 @@ left: 100%;
 	transform: rotate(360deg);
 	transform-origin: bottom;
 	-webkit-appearance: none;
-	cursor: pointer;
+	cursor: url(https://kastro-59.github.io/star/CD/YATfaoA.png), auto;
 }
 .Kastrostreaming input[type=range]:focus {
 	outline: none;
@@ -449,7 +450,7 @@ left: 100%;
 	padding: 0;
 	border: 0;
 	border-radius: 8px;
-	cursor: pointer;	
+	cursor: url(https://kastro-59.github.io/star/CD/YATfaoA.png), auto;	
 	animate: 0.2s;
 }
 .Kastrostreaming input[type=range]:focus::-webkit-slider-runnable-track {
@@ -462,7 +463,7 @@ left: 100%;
 	margin-top: -5px;
 	border: 2px solid #ff000d;
 	border-radius: 50%;
-	cursor: pointer;
+	cursor: url(https://kastro-59.github.io/star/CD/YATfaoA.png), auto;
 	-webkit-appearance: none;
 }
 .Kastrostreaming input[type=range]::-moz-range-track {
@@ -473,7 +474,7 @@ left: 100%;
 	padding: 0;
 	border: 0;
 	border-radius: 8px;
-	cursor: pointer;
+	cursor: url(https://kastro-59.github.io/star/CD/YATfaoA.png), auto;
 	animate: 0.2s; 
 }
 .Kastrostreaming input[type=range]::-moz-range-thumb {
@@ -482,7 +483,7 @@ left: 100%;
 	background: #ccc;
 	border: 5px solid #FFFFFF;
 	border-radius: 50%;
-	cursor: pointer;
+	cursor: url(https://kastro-59.github.io/star/CD/YATfaoA.png), auto;
 }
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
 	.Kastrostreaming input[type=range] {
@@ -491,7 +492,7 @@ left: 100%;
 		background: none;
 		margin-top: 0px;
 		padding: 6px 0px 6px 0px; 
-		cursor: pointer;
+		cursor: url(https://kastro-59.github.io/star/CD/YATfaoA.png), auto;
 	}
 }
 .Kastrostreaming input[type=range]::-ms-tooltip {
@@ -506,7 +507,7 @@ left: 100%;
 	padding: 0;
 	border: 0;
 	border-color: transparent;
-	cursor: pointer;
+	cursor: url(https://kastro-59.github.io/star/CD/YATfaoA.png), auto;
 	animate: 0.2s;  
 }
 .Kastrostreaming input[type=range]::-ms-fill-lower {
@@ -525,7 +526,7 @@ left: 100%;
 	background: #ccc;
 	border: 5px solid #FFFFFF;
 	border-radius: 50%;  
-	cursor: pointer;
+	cursor: url(https://kastro-59.github.io/star/CD/YATfaoA.png), auto;
 }
 .Kastrostreaming input[type=range]:focus::-ms-fill-lower {
 	background: rgba(255,255,255,.);
@@ -747,7 +748,7 @@ left: 100%;
   white-space: nowrap;
   position: relative;
   transform: translateX(-50%);
-  display:none!important	
+  display: inline-block;
   left: 200px;
   padding-top: 0px;
   animation: linear infinite;
