--- a/DVDzenoKasF2/css/styleK.css
+++ b/DVDzenoKasF2/css/styleK.css
@@ -1,3 +1,7 @@
+@charset 'utf-8';
+
+
+@import url('bootstrap.min.css');
  .a {
 	left: 0;
 	top: 0;
@@ -175,21 +179,21 @@
 	}
 
 	.Kastrostreaming .track-info-serv {
-	width: 345px;                  
+	width: 325px;                  
 	height: 26px;
 	box-sizing: border-box;
 	color: rgba(255,255,255,1);
 	font-size: 18px;
 	text-align: center;
 	position: absolute;
-	left: 30px;
+	left: 55px;
 	margin-top: 160px;
 	padding-top: 3px;
 	border-left: 1px solid rgba(255,255,255,.);
 	border-right: 1px solid rgba(255,255,255,.);
 	overflow: hidden;
 	z-index: 4;
-	top: 117px;
+	top: 129px;
    }
 
    .Kastrostreaming .track-info-ctr {
@@ -201,26 +205,26 @@
    .Kastrostreaming .songtitle {
 	font-size: 1.0em;
     font-weight: 400;
-    color: #FFFFFF;
+    color: #72FF50;
 	text-transform: uppercase;
     font-family: 'Reem Kufi', sans-serif;
    }
    .Kastrostreaming .artist-name {
 	font-size: 1.0em;
     font-weight: 400;
-    color: #FFFFFF;
+    color: #72FF50;
 	text-transform: uppercase;
     font-family: 'Reem Kufi', sans-serif;
    }
    .Kastrostreaming .servertitle {
-	max-width: 600px;
-	font-size: 13px;
-	color: #72FF50;
+	max-width: 300px;
+	font-size: 18px;
+	color: #000000;
 	text-align: center;
 	position: absolute;
-	left: 208px;
+	left: 10px;
 	right: 0;
-	bottom: 227px;
+	bottom: 317px;
 	margin: 0px;
 	font-family: 'Reem Kufi', sans-serif;
 	width: 240px;
@@ -230,9 +234,9 @@
 
    #animation{
 	position: absolute;
-	left: 150px;
-	top: 300px;
-	height: 120px;
+	left: 140px;
+	top: 310px;
+	height: 125px;
 	width: 56px;
 	}
 
@@ -246,46 +250,49 @@
 
    #animation3{
 	position: absolute;
-	left: 60px;
-	top: 40px;
-	height: 44px;
-	width: 44px;
+	left: 65px;
+	top: 35px;
+	height: 45px;
+	width: 45px;
 	}
 
    animation4{
 	position: absolute;
 	left: 300px;
 	top: 139px;
-	height: 44px;
-	width: 82px;
+	height: 45px;
+	width: 45px;
 	}
 
    .Kastrostreaming .listeners {
 	max-width: 250px;
-	font-size: 20px;
-	color: rgba(255,0,24,1);
+	font-size: 15px;
+	font-weight: 600;
+	color: #000000;
 	position: absolute;
 	transform: rotate(360deg);
-	top: 23px;
-	left: 155px; 
+	top: 60px;
+	left: 240px; 
 	width: 107px;
 	height: 18px;
 	z-index: 2;
    }
    .Kastrostreaming .listeners:before {
-	content:url(https://kastro-59.github.io/star/CD/iDtRMMV.png);
-	font-size: 20px;
+	content:"En Linea";
+	color: #000000;
+	font-size: 15px;
+	font-weight: 600;
 	padding-right: 6px;
 	vertical-align: top;
 	font: 'Reem Kufi', sans-serif;
    }
    .Kastrostreaming .ppBtn {
-	width: 30px;  
-	height: 30px;
+	width: 28px;  
+	height: 28px;
 	background-position: center center;
 	position: absolute;
-	bottom: 262px;
-	left: 80px;
+	bottom: 253px;
+	left: 65px;
 	right: 20;
 	margin: 0px;
 	border: 4px solid #FFFFFF; /*=====Para cambiar el color del circulo del boton play y pause=======*/
@@ -295,9 +302,9 @@
    }
    .Kastrostreaming .ppBtn:before {
 	content: "";
-	width: 30px;
-	height: 30px;
-	background-color: rgba(0,0,0,0.3); /*=====Para aclarar u obscurecer el boton de play y stop=======*/
+	width: 28px;
+	height: 28px;
+	background-color: rgba(0,0,0,0.3); /*=====Para aclarar o oscurecer el boton de play y stop=======*/
 	position: absolute;
 	top: 0px;
 	left: 0px;
@@ -328,19 +335,19 @@
     cursor: url(https://kastro-59.github.io/star/CD/YATfaoA.png), auto;
    }
    .Kastrostreaming .icons-left-serv {
-	position: absolute;
-	bottom: 310px;
-	left: 550px;            
-	width: 35px;
-	height: 25px;
+	position: absolute;                 /*=====Para modificar posicion boton historia=======*/
+	bottom: 65px;
+	left: 19px;            
+	width: 30px;
+	height: 30px;
 	z-index: 11;
    }
-   .Kastrostreaming .icons-right-serv {
+   .Kastrostreaming .icons-right-serv {       
 	text-align: left;        
 	position: absolute;
 	bottom: 298px;
 	right: 138px;
-	top: 261px;
+	top: 269px;                        /*=====Para modificar posicion boton volumen=======*/
 	z-index: 11;
 	width: 7px;
 	height: 23px;
@@ -396,8 +403,8 @@
    .Kastrostreaming .volume-slider {
 	position: absolute;
 	transform: rotate(135deg);
-	bottom: 80px;          
-	right: 370px;
+	bottom: 73px;                                /*=====Para modificar posicion barra volumen=======*/
+	right: 377px;
 	display: auto;
 	z-index: 10;
 	box-shadow: 0 0 1px #FFFFFF,
@@ -534,6 +541,8 @@ left: 100%;
 .Kastrostreaming input[type=range]:focus::-ms-fill-upper {
 	background: rgba(255,255,255,.);
 }
+
+
 .Kastrostreaming .history-serv {
 	position: absolute;
 	top: -18px;
@@ -794,11 +803,12 @@ left: 100%;
 }
 .data {
 	position: absolute;
-	font-family: 'Chela One', cursive;
-	font-size: 15px;
+	font-family: 'Reem Kufi', sans-serif;
+	font-size: 16px;
+	font-weight: 400;
 	left: 205px;
-	top: 60px;
-	color: #FFFFFF;
+	top: 83px;
+	color: #72FF50;
 	width: 236px;
 	height: 19px;
 	z-index: 16;
@@ -806,10 +816,11 @@ left: 100%;
 }
 #Clock {
 	position: absolute;
-	top: 80px;
-	left: 303px;
+	top: 326px;
+	left: 286px;
 	width: 43px;
-	color: #FFFFFF;
-	font-family: 'Chela One', cursive;
-	font-size: 15px;
+	color: #72FF50;
+	font-family: 'Reem Kufi', sans-serif;
+	font-weight: 500;
+	font-size: 20px;
 }
