--- a/DVDzenoKasF2/css/styleK5.css
+++ b/DVDzenoKasF2/css/styleK5.css
@@ -34,7 +34,7 @@ body {
 #bgCover {
 	width: 327px;
 	height: 350px;
-	background:url() center no-repeat ;
+	background:url(https://i.imgur.com/bl3MhSk.png) center no-repeat ;
 	background-size: cover;
 	position: absolute;
 	margin: -26px;
@@ -149,13 +149,13 @@ body {
   -webkit-box-shadow: 2px 3px 30px 0px rgba();
   -moz-box-shadow: 2px 3px 30px 0px rgba();
   box-shadow: 2px 3px 30px 0px rgba();
-  z-index: -12;
+  z-index: -10;
   overflow: hidden;
   left: 109px;
   top: 10px;
-        -webkit-animation: spin 6s linear infinite;
-    -moz-animation: spin 6s linear infinite;
-   animation: spin 6s linear infinite;
+        -webkit-animation: spin 5s linear infinite;
+    -moz-animation: spin 5s linear infinite;
+   animation: spin 5s linear infinite;
    }
 
     @-moz-keyframes spin {
